--- a/lib/eCMS_web/components/layouts/admin.html.heex
+++ b/lib/eCMS_web/components/layouts/admin.html.heex
@@ -34,16 +34,16 @@
       </.link>
     </li>
     <li>
-      <.link navigate={~p"/"} class="block py-1 px-2 hover:bg-tealLight">
+      <.link navigate={~p"/admin/courses"} class="block py-1 px-2 hover:bg-tealLight">
         Course Schedule
       </.link>
     </li>
   </ul>
 
-      <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Enrollments</.link>
-      <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Notifications</.link>
-      <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Results</.link>
-      <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Certifications</.link>
+      <.link navigate={~p"/admin/courses"} class="block px-3 py-2 rounded hover:bg-tealLight">Enrollments</.link>
+      <.link navigate={~p"/admin/courses"} class="block px-3 py-2 rounded hover:bg-tealLight">Notifications</.link>
+      <.link navigate={~p"/admin/courses"} class="block px-3 py-2 rounded hover:bg-tealLight">Results</.link>
+      <.link navigate={~p"/admin/courses"} class="block px-3 py-2 rounded hover:bg-tealLight">Certifications</.link>
     </nav>
     <!-- User Profile Section -->
     <div class="border-t border-gray-700 px-4 py-4 relative">
