--- a/lib/eCMS_web/components/layouts/student.html.heex
+++ b/lib/eCMS_web/components/layouts/student.html.heex
@@ -8,12 +8,12 @@
     </div>
 
     <nav class="flex-1 px-4 py-6 space-y-3">
-      <.link navigate={~p"/dashboard_student"} class="block px-3 py-2 rounded hover:bg-tealLight">Dashboard</.link>
-      <.link navigate={~p"/course_live/student_course"} class="block px-3 py-2 rounded hover:bg-tealLight">Course</.link>
-      <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Enrollments</.link>
-      <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Notifications</.link>
-      <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Results</.link>
-      <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Certifications</.link>
+      <.link navigate={~p"/student/dashboard_student"} class="block px-3 py-2 rounded hover:bg-tealLight">Dashboard</.link>
+      <.link navigate={~p"/student/course_live/student_course"} class="block px-3 py-2 rounded hover:bg-tealLight">Course</.link>
+      <.link navigate={~p"/student/course_live/student_course"} class="block px-3 py-2 rounded hover:bg-tealLight">Enrollments</.link>
+      <.link navigate={~p"/student/course_live/student_course"} class="block px-3 py-2 rounded hover:bg-tealLight">Notifications</.link>
+      <.link navigate={~p"/student/course_live/student_course"} class="block px-3 py-2 rounded hover:bg-tealLight">Results</.link>
+      <.link navigate={~p"/student/course_live/student_course"} class="block px-3 py-2 rounded hover:bg-tealLight">Certifications</.link>
     </nav>
     <!-- User Profile Section -->
     <div class="border-t border-gray-700 px-4 py-4 relative">
@@ -41,7 +41,7 @@
               Admin
             <% end %>
           </p>
-          <p class="text-xs text-gray-400">Administrator</p>
+          <p class="text-xs text-gray-400">Trainee</p>
         </div>
 
         <!-- Dropdown Icon -->
