--- a/lib/eCMS_web/components/layouts/admin.html.heex
+++ b/lib/eCMS_web/components/layouts/admin.html.heex
@@ -40,8 +40,7 @@
     </li>
   </ul>
 
-      <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Enrollments</.link>
-      <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Notifications</.link>
+      <.link navigate={~p"/admin/notifications"} class="block px-3 py-2 rounded hover:bg-tealLight">Notifications</.link>
       <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Results</.link>
       <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Certifications</.link>
     </nav>
