--- a/lib/eCMS_web/components/layouts/student.html.heex
+++ b/lib/eCMS_web/components/layouts/student.html.heex
@@ -8,10 +8,10 @@
     </div>
 
     <nav class="flex-1 px-4 py-6 space-y-3">
-      <.link navigate={~p"/dashboard_student"} class="block px-3 py-2 rounded hover:bg-tealLight">Dashboard</.link>
-      <.link navigate={~p"/course_live/student_course"} class="block px-3 py-2 rounded hover:bg-tealLight">Course</.link>
+      <.link navigate={~p"/student/dashboard_student"} class="block px-3 py-2 rounded hover:bg-tealLight">Dashboard</.link>
+      <.link navigate={~p"/student/course_live/student_course"} class="block px-3 py-2 rounded hover:bg-tealLight">Course</.link>
       <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Enrollments</.link>
-      <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Notifications</.link>
+      <.link navigate={~p"/student/student_notifications"} class="block px-3 py-2 rounded hover:bg-tealLight">Notifications</.link>
       <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Results</.link>
       <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Certifications</.link>
     </nav>
@@ -27,7 +27,7 @@
         <!-- Avatar -->
           <!-- Always show default avatar -->
           <img 
-          src={~p"/images/clipart153139-12-349.png"} 
+          src={~p"/images/clipart153139-12-349.png"}
           alt="User avatar" 
           class="w-6 h-6 rounded-full object-cover"
           />
@@ -41,7 +41,7 @@
               Admin
             <% end %>
           </p>
-          <p class="text-xs text-gray-400">Administrator</p>
+          <p class="text-xs text-gray-400">Trainee</p>
         </div>
 
         <!-- Dropdown Icon -->
