--- a/lib/eCMS_web/components/layouts/trainer.html.heex
+++ b/lib/eCMS_web/components/layouts/trainer.html.heex
@@ -10,7 +10,7 @@
     <nav class="flex-1 px-4 py-6 space-y-3">
       <.link navigate={~p"/trainer/dashboard_trainer"} class="block px-3 py-2 rounded hover:bg-tealLight">Dashboard</.link>
       <.link navigate={~p"/trainer/trainer_schedule"} class="block px-3 py-2 rounded hover:bg-tealLight">Schedule</.link>
-      <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Enrollments</.link>
+      <.link navigate={~p"/trainer/enrollments"} class="block px-3 py-2 rounded hover:bg-tealLight">Enrollments</.link>
       <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Results</.link>
       <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Certifications</.link>
     </nav>
