--- a/lib/eCMS_web/live/schedule_live/index.html.heex
+++ b/lib/eCMS_web/live/schedule_live/index.html.heex
@@ -26,7 +26,8 @@
             </tr>
           </thead>
           <tbody class="bg-white divide-y divide-gray-200">
-            <tr :for={{dom_id, schedule} <- @streams.schedules} id={dom_id}>
+            <tr :for={{dom_id, schedule} <- @streams.course_schedules} id={dom_id}>
+
               <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
                 <%= schedule.course.title %>
               </td>
