--- a/lib/eCMS_web/components/layouts/student.html.heex
+++ b/lib/eCMS_web/components/layouts/student.html.heex
@@ -11,7 +11,7 @@
       <.link navigate={~p"/student/dashboard_student"} class="block px-3 py-2 rounded hover:bg-tealLight">Dashboard</.link>
       <.link navigate={~p"/student/course_live/student_course"} class="block px-3 py-2 rounded hover:bg-tealLight">Course</.link>
       <.link navigate={~p"/student/student_notifications"} class="block px-3 py-2 rounded hover:bg-tealLight">Notifications</.link>
-      <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Results</.link>
+      <.link navigate={~p"/student/student_results"} class="block px-3 py-2 rounded hover:bg-tealLight">Results</.link>
       <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Certifications</.link>
     </nav>
     <!-- User Profile Section -->
