--- a/lib/eCMS_web/components/layouts/student.html.heex
+++ b/lib/eCMS_web/components/layouts/student.html.heex
@@ -12,7 +12,7 @@
       <.link navigate={~p"/student/course_live/student_course"} class="block px-3 py-2 rounded hover:bg-tealLight">Course</.link>
       <.link navigate={~p"/student/student_notifications"} class="block px-3 py-2 rounded hover:bg-tealLight">Notifications</.link>
       <.link navigate={~p"/student/student_results"} class="block px-3 py-2 rounded hover:bg-tealLight">Results</.link>
-      <.link navigate={~p"/"} class="block px-3 py-2 rounded hover:bg-tealLight">Certifications</.link>
+      <.link navigate={~p"/student/student_certification"} class="block px-3 py-2 rounded hover:bg-tealLight">Certifications</.link>
     </nav>
     <!-- User Profile Section -->
     <div class="border-t border-gray-700 px-4 py-4 relative">
